<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_albums">

    <fragment
        android:id="@+id/navigation_albums"
        android:name="com.uniandes.vinilos.ui.album.AlbumListFragment"
        android:label="@string/title_albums">
        <action
            android:id="@+id/action_albumListFragment_to_albumDetailFragment"
            app:destination="@id/navigation_album_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_album_detail"
        android:name="com.uniandes.vinilos.ui.album.AlbumDetailFragment"
        android:label="@string/album_details">
        <argument
            android:name="albumId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_artists"
        android:name="com.uniandes.vinilos.ui.artists.ArtistsFragment"
        android:label="@string/title_artists" />

    <fragment
        android:id="@+id/navigation_collectors"
        android:name="com.uniandes.vinilos.ui.collectors.CollectorsFragment"
        android:label="@string/title_collectors" />

</navigation> 